identity: web api create new local user for directory

--- a/microsoft-identity/backend-aspnet-core/appsettings.Development.json
+++ b/microsoft-identity/backend-aspnet-core/appsettings.Development.json
@@ -3,6 +3,7 @@
     "Instance": "https://login.microsoftonline.com/",
     "TenantId": "f5d0b41b-498b-426f-be6f-354a5d64cced",
     "ClientId": "1674abe9-cd8a-4f9f-8860-1c001c0b86ef",
+    "Audience": "api://learn-microsoft-identity",
     "Scopes": "access_as_user"
   },
   "Logging": {
