--- a/azure-staticwebapp/jsfwk-react-nextjs/package.json
+++ b/azure-staticwebapp/jsfwk-react-nextjs/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
+    "install": "^0.13.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "postcss": "^8",
+    "typescript": "^5"
   }
 }
