--- a/azure-staticwebapp/jsfwk-react-nextjs/package.json
+++ b/azure-staticwebapp/jsfwk-react-nextjs/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
     "install": "^0.13.0",
