--- a/.github/workflows/cicd-azure-staticwebapp.yml
+++ b/.github/workflows/cicd-azure-staticwebapp.yml
@@ -1,4 +1,4 @@
-name: Deploy web app to Azure Static Web Apps
+name: Deploy Azure Static Web Apps
 
 on:
   push:
@@ -36,6 +36,9 @@ jobs:
   deploy_jsfwk_react_nextjs:
     needs: detect_changes
     if: ${{ inputs.jsfwk_react_nextjs || needs.detect_changes.outputs.jsfwk_react_nextjs == 'true' }}
+    permissions:
+      contents: read
+      pull-requests: write
     runs-on: ubuntu-latest
     name: Deploy the Next.JS React App
     steps:
