--- a/azure-staticwebapp/jsfwk-react-vitejs/package.json
+++ b/azure-staticwebapp/jsfwk-react-vitejs/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
     "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
