devops: update cicd for azure swa deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "**/next-env.d.ts": true,
         "**/node_modules": true,
         "**/out": true,
+        "**/dist": true,
         "**/.next": true,
     }
 }
