--- a/.github/workflows/cicd-azure-staticwebapp.yml
+++ b/.github/workflows/cicd-azure-staticwebapp.yml
@@ -15,6 +15,10 @@ on:
         description: Deploy the React App with Next.JS
         required: true
         type: boolean
+      jsfwk_react_vitejs:
+        description: Deploy the React App with Vite.JS
+        required: true
+        type: boolean
 
 jobs:
   detect_changes:
@@ -30,8 +34,11 @@ jobs:
           filters: |
             jsfwk_react_nextjs:
               - azure-staticwebapp/jsfwk-react-nextjs/**
+            jsfwk_react_vitejs:
+              - azure-staticwebapp/jsfwk-react-vitejs/**
     outputs:
       jsfwk_react_nextjs: ${{ steps.detect_changes.outputs.jsfwk_react_nextjs }}
+      jsfwk_react_vitejs: ${{ steps.detect_changes.outputs.jsfwk_react_vitejs }}
 
   deploy_jsfwk_react_nextjs:
     needs: detect_changes
@@ -66,3 +73,37 @@ jobs:
           action: 'upload'
           app_location: 'azure-staticwebapp/jsfwk-react-nextjs'
           output_location: '.next'
+
+  deploy_jsfwk_react_vitejs:
+    needs: detect_changes
+    if: ${{ inputs.jsfwk_react_vitejs || needs.detect_changes.outputs.jsfwk_react_vitejs == 'true' }}
+    permissions:
+      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
+    name: Deploy the Vite.JS React App
+    steps:
+      - name: Login into Azure Service Principal
+        uses: Azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Get Secret from Azure Key Vault
+        id: get_secret
+        uses: azure/cli@v2
+        with:
+          inlineScript: |
+            secret_value=$(az keyvault secret show \
+              --vault-name learn-azure-keyvault \
+              --name swa-token-jsfwk-react-vitejs \
+              --query value -o tsv)
+            echo "::add-mask::$secret_value"
+            echo "secret_value=$secret_value" >> $GITHUB_ENV
+      - uses: actions/checkout@v4
+      - name: Build and Deploy
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ env.secret_value }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          action: 'upload'
+          app_location: 'azure-staticwebapp/jsfwk-react-vitejs'
+          output_location: 'dist'            
