--- a/azure-staticwebapp/jsfwk-react-nextjs/.vscode/settings.json
+++ b/azure-staticwebapp/jsfwk-react-nextjs/.vscode/settings.json
@@ -7,8 +7,10 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
-        "next-env.d.ts": true,
-        "node_modules": true,
-        ".next": true,
+        "**/next-env.d.ts": true,
+        "**/node_modules": true,
+        "**/out": true,
+        "**/dist": true,
+        "**/.next": true,
     }
 }
