--- a/azure-microsoftentra/jsfwk-react-vitejs/package.json
+++ b/azure-microsoftentra/jsfwk-react-vitejs/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@azure/msal-browser": "^3.21.0",
+    "@azure/msal-react": "^2.0.22",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "flowbite": "^2.5.1",
     "flowbite-react": "^0.10.1",
