aspnet: apply microsoft identity for the authentication

--- a/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/appsettings.Development.json
+++ b/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/appsettings.Development.json
@@ -2,7 +2,15 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.IdentityModel": "Warning"
     }
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "TenantId": "f5d0b41b-498b-426f-be6f-354a5d64cced",
+    "ClientId": "773e2572-c2de-433a-aeea-02c6b6fc975b",
+    "Audience": "api://learn-architecture-azure",
+    "Scopes": "Application.Access"
   }
 }
