--- a/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/Learn.Azure.MicrosoftEntra.Identity.Service.csproj
+++ b/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/Learn.Azure.MicrosoftEntra.Identity.Service.csproj
@@ -4,9 +4,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>cef28639-c490-459f-b6fe-681525b5bcb0</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
