--- a/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/Learn.Azure.MicrosoftEntra.Identity.Service.csproj
+++ b/azure-microsoftentra/dotnet-aspnet-core/Learn.Azure.MicrosoftEntra.Identity.Service/Learn.Azure.MicrosoftEntra.Identity.Service.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="5.57.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
